2017-0x-xx 0.15 [xxxxxxx]
  + Arrow, line and feather types are determined by relation type
  +
2017-03-18 0.14 [097b793]
  + Classifiers are layouted avoiding overlaps
2017-02-25 0.13 [ff3b72f]
  + The txt-file export contains features and relationships
  + The user can export pdf and ps formats
  + The user is able to import features from the clipboard
  + The user is able to export relationships and features to the clipboard
2017-02-12 0.12 [7e37cf9]
  + Features can be created, modified, deleted (incl. undo/redo)
2017-02-05 0.11 [655350d]
  + Align objects vertically and horizontally (snap)
  + Edit new classifiers or relationships immediately
2017-01-28 0.10 [e93e7ec]
  + Relationships can be created, modified, deleted (incl. undo/redo)
  . DB format changed: features.key is not UNIQUE anymore (compatible change)
2016-12-22 0.09 [6d5cfac]
  + Mark and instantiate classifiers
  + Test the database for errors and fix them
  + Diagrams show also non-ascii names now
2016-12-11 0.08 [225a0cf]
  + Export of png and svg diagrams and txt descriptions
  . DB format changed: classifier.name is UNIQUE, features.key is UNIQUE (compatible change)
2016-11-26 0.07 [874f539]
  + The user can move classifiers
2016-10-06 0.06 [e2b0e01]
  + cut+copy+paste allow to copy diagrams and classifiers to and from the clipboard
2016-08-12 0.05 [fbae0f5]
  + The program integrates into a freedesktop.org desktop
  + rpm and deb installers are generated
  + undo/redo works for creating, modifying and deleting objects
2016-07-03 v004 [09e8ac4]
  + The user can delete classifiers and diagrams
  - DB format incompatible to version 0.03 (todo: in diagramelements, manually create the column "display_flags" as INTEGER)
2016-05-22 v003 [e0c0196]
  + The user can select and switch the database file
2016-05-01 v002 [1d03746]
  + The user can create and rename classifiers like classes
  - DB format incompatible to version 0.01
2016-03-31 v001 [b8be2b]