@@ -65,14 +65,6 @@
  *  \image latex resources/edit_delete.png "" width=3cm
  *  \li Deletes all pink-cornered elements. This operation may fail if marked elements have unmarked children.
  *
- *  \image html resources/edit_undo.png
- *  \image latex resources/edit_undo.png "" width=3cm
- *  \li Un-does the last operation. (Opening a database, exporting files cannot be undone)
- *
- *  \image html resources/edit_redo.png
- *  \image latex resources/edit_redo.png "" width=3cm
- *  \li Re-does the last un-done operation.
- *
  *  \image html resources/edit_instantiate.png
  *  \image latex resources/edit_instantiate.png "" width=3cm
  *  \li Toggles the pink-cornered classifiers between classes and instances. (Does not work for relationships and features)
@@ -80,6 +72,18 @@
  *  \image html resources/edit_highlight.png
  *  \image latex resources/edit_highlight.png "" width=3cm
  *  \li Toggles the pink-cornered classifiers between yellow-marked, greyed-out and normal. (Does not work for relationships and features)
+ *
+ *  \image html resources/edit_reset.png
+ *  \image latex resources/edit_reset.png "" width=3cm
+ *  \li Resets the pink-cornered selection
+ *
+ *  \image html resources/edit_undo.png
+ *  \image latex resources/edit_undo.png "" width=3cm
+ *  \li Un-does the last operation. (Opening a database, exporting files cannot be undone)
+ *
+ *  \image html resources/edit_redo.png
+ *  \image latex resources/edit_redo.png "" width=3cm
+ *  \li Re-does the last un-done operation.
  *
  *  \image html resources/crystal_facet_uml.png
  *  \image latex resources/crystal_facet_uml.png "" width=3cm
